Add assert dependency and cleanup

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "php": "~7.2.0",
         "emico/robinhq-lib": "^1.0",
-        "zendframework/zend-diactoros": "^1.8"
+        "zendframework/zend-diactoros": "^1.8",
+        "webmozart/assert": "^1.4"
     },
     "type": "magento2-module",
     "autoload": {
