--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "magento/module-customer": "101.*|102.*",
         "magento/framework": ">=100.1.0,<=100.1.16|>=101.0.0,<=101.0.8|>=102.0.0,<=102.0.1",
         "zendframework/zend-diactoros": "^1.8",
-        "webmozart/assert": "^1.4"
+        "webmozart/assert": "^1.4",
+        "ext-json": ",*"
     },
     "type": "magento2-module",
     "autoload": {
