--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
+language: php
+sudo: false
 image: php:7.2
-cache:
-  paths:
-    - vendor/
 
 before_script:
-  - apt-get update && apt-get install -qqy git unzip
-  - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
   - composer install
-  - php -S localhost:8085 --docroot public &>/dev/null&
 
 test:
   script:
