--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ image: php:7.2
 
 before_script:
   - composer config -a -g http-basic.repo.magento.com $MAGENTO_USERNAME $MAGENTO_PASSWORD
-  - composer install
+  - composer install --no-plugins
 
 test:
   script:
