--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "emico/magento-2-robinhq",
     "description": "Magento 2 module for RobinHQ integration. Provides API endpoints for RobinHQ dynamic API",
     "require": {
-        "php": "^7.2.0",
+        "php": "^7.1.0",
         "emico/robinhq-lib": "^1.0",
-        "magento/module-customer": "101.*|102.*",
-        "magento/module-catalog": "102.*|103.*",
+        "magento/module-customer": "102.*",
+        "magento/module-catalog": "103.*",
         "magento/module-message-queue": "100.*",
-        "magento/framework-message-queue": "100.3.*",
-        "magento/framework": ">=100.1.0,<=100.1.16|>=101.0.0,<=101.0.8|>=102.0.0,<=102.0.1",
+        "magento/framework-message-queue": "100.*",
+        "magento/framework": "102.0.*",
         "zendframework/zend-diactoros": "^1.8",
         "webmozart/assert": "^1.4",
         "ext-json": "*"
