Add more module dependencies to composer. Add php and magento requirements to Readme

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "emico/robinhq-lib": "^1.0",
         "magento/module-customer": "101.*|102.*",
         "magento/module-catalog": "102.*|103.*",
+        "magento/module-sales": "101.*|102.*",
+        "magento/module-config": "101.*",
         "magento/framework": "101.*|102.*",
         "zendframework/zend-diactoros": "^1.8",
         "webmozart/assert": "^1.4",
