--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "OSL-3.0",
     "description": "Magento 2 module for RobinHQ integration. Provides API endpoints for RobinHQ dynamic API",
     "require": {
-        "php": ">=7.4 <=8.1",
+        "php": ">=7.4 <8.2",
         "emico/robinhq-lib": "^2.0",
         "magento/module-customer": "101.*|102.*|103.*",
         "magento/module-catalog": "102.*|103.*|104.*",
